--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
+    <script src="login.js" type="module" defer></script>
     <title>login</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
     </header> 
     
     <div class="form" id="myForm">
-        <a href="#" class="log-in">Log In</a>
+        <h2 class="log-in">Log In</h2>
         <div class ="input-form">
             <label class="label" for="email">E-mail</label>
             <input type="text" name="email" id="email">
@@ -36,10 +37,9 @@
             <span id="error"></span>
         </div>
         <div class="input-form">
-            <button class="submit">Se connecter</button>
+            <button class= "submit" type="submit" value ="ok">Se connecter</button>
         </div>
         <a href="#" class="forget">Mot de passe oublié</a>
     </div>
-    <script src="./login.js"></script>
 </body>
 </html>
